fix on safari

--- a/src/scss/cover.scss
+++ b/src/scss/cover.scss
@@ -146,7 +146,7 @@
   .hero {
     min-width: 100%;
     max-width: 100%;
-    min-height: 100px;
+    min-height: 250px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -202,23 +202,24 @@
       }
     }
   }
-
   .cover-content {
     display: flex;
     flex-direction: column;
     max-width: 600px;
     overflow-y: auto;
     overflow-x: hidden;
-    margin-bottom: 10em;
+    padding-bottom: 10em;
     h1, h2, h3, h4, h5 { text-align: center; }
     h1 { margin-bottom: -15px; margin-top: 30px; }
     h5 { margin-top: -15px; }
+
 
     // mobile styles, remove overlay buttons
     @media only screen and (max-width: 1200px) {
       font-size: 22pt !important;
       max-width: 100vw;
       padding: 0 40px 80px 40px;
+      margin-bottom: 0;
     }
 
     .verify-tabs {
@@ -247,9 +248,12 @@
         }
       }
     }
-
-
   }
+
+ _::-webkit-full-page-media, _:future, :root .cover-content {
+    max-width: auto;
+  }
+
 }
 
 .cover-footer {
